<resources>
    <string name="app_name">Barber Shop</string>
    <string name="app_bg">app bg</string>
    <string name="book_now">Book it now</string>
    <string name="title_home">Schedule</string>
    <string name="title_profile">Profile</string>
    <string name="title_user_history">History</string>
    <string name="home_subtitle">Choose a service, location and \n time.</string>
    <string name="app_slide_images">app slide images</string>
    <string name="schedule_service">Schedule</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="Password">Password</string>
    <string name="phone">Phone</string>
    <string name="new_user">Don\'t have an account?</string>
    <string name="create_account"> <u>Create Account</u></string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="recover"> <u> Recovery password</u></string>
    <string name="policy_privacy">Privacy Policy</string>
    <string name="history">History</string>
    <string name="scheduled">Scheduled.</string>
    <string name="services">Services</string>
    <string name="unit">Establishment</string>
    <string name="service">Service</string>
    <string name="barber">Barber</string>
    <string name="date">Date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_units">Establishment</string>
    <string name="sched">US$ %d Schedule</string>
    <string name="back_string"><![CDATA[<]]></string>
    <string name="product1">Bussines Haircut(US$ 50,00) - Duration 40 min</string>
    <string name="product2">Classic Haircut(US$ 90,00) - Duration 60 min</string>
    <string name="product3">Flat top HairCutUS$ 55,00) - Duration 20 min</string>
    <string name="product4">Military Haircut(US$ 40,00) - Duration 40 min</string>
    <string name="product5">Kids Haircut(US$ 50,00) - Duration 40 min</string>
    <string name="product6">Old Fashion Haircut(US$ 90,00) - Duration 80 min</string>
    <string name="barber_location">American Shop</string>
    <string name="barber_open">Open</string>
    <string name="barber_closed">Closed</string>
    <string name="dummy_location">Newport,VA </string>
    <string name="dummy_city">Virginia </string>
    <string name="select_location">Select location</string>
    <string name="close">close</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="info_profile_photo">user profile photo</string>
    <string name="credits">Credits</string>
    <string name="need_help">Need Some help?</string>
    <string name="manage_your_account">Manage your account?</string>
    <string name="help_center">Help Center</string>
    <string name="menu_item">menu item</string>
    <string name="save">Save</string>
    <string name="notifications">Notifications</string>
    <string name="navigation_arrow">navigation arrow</string>
    <string name="notification_icon">notification icon</string>
    <string name="insert_ticket">Insert coupon</string>
    <string name="earn_credits">Earn Credits</string>
    <string name="exit">Exit</string>
    <string name="schedule">Schedule</string>
    <string name="no_service_in_list">You don\'t have any \n appointments yet.</string>
    <string name="schedule_now">Schedule now and wait to have \n a great experience.</string>
    <string name="no_history_toshow">There are no items in the history.</string>
    <string name="dummy_name">Ada Lovelace</string>
    <string name="seu_antonio">Mister Joe</string>
    <string name="cancled">Canceled</string>
    <string name="feed">Feed</string>
    <string name="days_afater">5 days before</string>
    <string name="feedback">Feedback</string>
    <string name="Feedback">Feedback</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at fermentum enim. Sed pulvinar consectetur felis id finibus. Sed consectetur finibus nisi, eu sodales tellus rutrum eget. Morbi non justo et nulla lobortis tempus id a mauris. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce placerat nisl nunc, vel egestas lorem commodo quis. Fusce nec ultricies purus.</string>
    <string name="schedule_confirmed">Appointment confirmed!</string>
    <string name="professional">Professional</string>
    <string name="my_schedules">View my appointments</string>
    <string name="craete_your_profile">Create your profile</string>
    <string name="text_presentation_1">Within minutes you will have access to the application services</string>
    <string name="text_presentation_2">Schedule a time that fits your needs.</string>
    <string name="local_service">Choose a lcoation and a service that suits you</string>
    <string name="arriive_on_time">Arrive on time</string>
    <string name="text_presentation_3">Now you are ready to begin.</string>


</resources>
