<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/bottomSheetContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bottom_sheet_background">


        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_service1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/product1"
            android:onClick="onCheckboxClicked"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="8dp" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_service2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/product2"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="72dp" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_service3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/product3"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="136dp" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_service4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/product4"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="200dp" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_service5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/product5"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="200dp" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_service6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/product6"
            tools:layout_editor_absoluteX="16dp"
            android:onClick="onCheckboxClicked"
            tools:layout_editor_absoluteY="200dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDismiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:backgroundTint="@android:color/black"
                android:text="@string/back_string" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAgendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                tools:text="@string/sched"
                android:text="Agendar"
                />

        </LinearLayout>
    </LinearLayout>
</layout>