<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupBooked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="textView7,textView8,btnHistoryBookNow,imageView6"
            />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="rvHistory,tvNoItensShow"

            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/no_service_in_list"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/schedule_now"
            android:textAlignment="center"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />


        <Button
            android:id="@+id/btnHistoryBookNow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:text="@string/book_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="128dp"
            android:layout_height="105dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="@+id/btnHistoryBookNow"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:srcCompat="@drawable/ic_calendar" />

        <TextView
            android:id="@+id/tvNoItensShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_history_toshow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_history"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            >
        </androidx.recyclerview.widget.RecyclerView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>