<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.barbershop.ui.schedules.profile.ProfileViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/shadowbackground"
        tools:context=".ui.schedules.profile.ProfileFragment">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:background="#494646"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/topSlide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.50"
            android:background="@drawable/slide1"
            android:contentDescription="@string/app_slide_images"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="0.0" />

        <include layout="@layout/title_stile_1" />

        <TextView
            android:id="@+id/tvDrashSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/home_subtitle"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/logo"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintVertical_bias="0.13999999" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardHome"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDrashSubtitle">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tvLoginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_bold_condensed"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="14sp"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                    app:layout_constraintStart_toStartOf="@+id/inputEmail"
                    app:layout_constraintTop_toBottomOf="@+id/inputEmail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Password" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    style="@style/black_button_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/login"
                    app:backgroundTint="@android:color/black"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout7"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout7"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/new_user"
                    app:layout_constraintStart_toStartOf="@+id/btnLogin"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

                <TextView
                    android:id="@+id/tvCreateAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/create_account"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView"
                    app:layout_constraintStart_toEndOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/forgot_password"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/tvPasswordRec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/recover"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
                    app:layout_constraintStart_toEndOf="@+id/textView3" />

                <TextView
                    android:id="@+id/tvPrivacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/policy_privacy"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>