<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="establishment"
            type="com.example.barbershop.data.items.EstablishmentName" />

        <variable
            name="clickListener"
            type="com.example.barbershop.data.adapter.EstablishmentAdapter.EstablishmentListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/barLocationContainer"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="@{() -> clickListener.onClick(establishment)}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvBarberName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_bold"
            tools:text="@string/barber_location"
            android:text="@{establishment.barberName}"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNeighborhood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_bold"
            tools:text="@string/dummy_city"
            android:text="@{establishment.neighborhood}"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvBarberName"
            app:layout_constraintStart_toEndOf="@+id/tvBarberName" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="@string/dummy_location"
            android:text="@{establishment.address}"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvBarberName"
            app:layout_constraintTop_toBottomOf="@+id/tvBarberName" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/select_location"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_keyboard_right" />


        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBarberStatus" />

        <TextView
            android:id="@+id/tvBarberStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/barber_open"
            app:barberStatus="@{establishment}"
            android:textColor="@android:color/holo_green_dark"
            app:layout_constraintStart_toStartOf="@+id/tvAddress"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>