<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardFeedItem"
            android:layout_width="276dp"
            android:layout_height="328dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="@dimen/cardElevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivFeedItem"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/slide1"

                    />

                <TextView
                    android:id="@+id/tvBarberName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/dummy_name"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/ivSmallBarber"
                    app:layout_constraintStart_toEndOf="@+id/ivSmallBarber"
                    app:layout_constraintTop_toTopOf="@+id/ivSmallBarber" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivSmallBarber"
                    android:layout_width="31dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/img_avatar1"
                    app:layout_constraintBottom_toTopOf="@+id/tvTimePassed"
                    app:layout_constraintStart_toStartOf="@+id/tvTimePassed" />


                <TextView
                    android:id="@+id/tvTimePassed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/days_afater"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>